--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -13,7 +13,7 @@
     border-radius: 60px;
     padding: 8px;
     color: #f6f6f6;
-    background-color: #7e847f;
+    background-color: #344955;
     gap: 5px;
 }
 
