--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -35,7 +35,7 @@
     font-family: inherit;
     cursor: pointer;
     color: #f6f6f6;
-    background-color: #7e847f;
+    background-color: #344955;
     transition: all 0.25s ease-in-out;
 }
 
